Fix visible drawer on page load.

--- a/app/stylesheets/app.scss
+++ b/app/stylesheets/app.scss
@@ -58,7 +58,7 @@ li {
   position: absolute;
   color: #aaa;
   right: 5px;
-  bottom: 0px;
+  bottom: 0;
   font-style: italic;
   font-size: 11px;
 }
@@ -81,7 +81,6 @@ li {
   overflow: hidden;
   max-height: 0;
   transition: border-color 0.5s, padding 0.5s, max-height 0.5s;
-  background-color: black;
   border: 1px solid transparent;
   padding: 0 10px;
   border-radius: 5px;
@@ -92,6 +91,7 @@ li {
   padding-top: 10px;
   padding-bottom: 10px;
   border-color: #2F272A;
+  background-color: black;
 }
 
 .btn {
